k8s-manifests/crud-rest-api-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
# In case more than one pod is required on each node, I'd use Deployment instead of DaemonSet
metadata:
  name: crud-rest-api
  namespace: crud-rest-api
  labels:
    app: crud-rest-api
spec:
  selector:
    matchLabels:
      name: crud-rest-api 
      app: crud-rest-api
  template:
    metadata:
      labels:
        name: crud-rest-api
        app: crud-rest-api
    spec:
      containers:
        - name: crud-rest-api
          image: nirbo2/crud-rest-api-flinks:d2b9b487889e4f0d39fa1e0d9959214843a6b7ff
          readinessProbe:
            httpGet:
              path: / 
              port: 8080
