k8s-manifests/crud-rest-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
# I'm using Deployment because this API specifically is in-memory and not persistent, hence every request goes to a different pod with a different memory state.
# When using persistence I'd use DaemonSet instead.
metadata:
  name: crud-rest-api
  namespace: crud-rest-api
  labels:
    app: crud-rest-api
spec:
  replicas: 1
  selector:
    matchLabels:
      name: crud-rest-api 
      app: crud-rest-api
  template:
    metadata:
      labels:
        name: crud-rest-api
        app: crud-rest-api
    spec:
      containers:
        - name: crud-rest-api
          image: nirbo2/crud-rest-api-flinks:57af2d92f31e362175e91161d7a32d001aeec12f
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
