k8s-manifests/nginx-web-server-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
# In case more than one pod is required on each node, I'd use Deployment instead of DaemonSet
metadata:
  name: nginx-web-server
  namespace: flinks
  labels:
    app: nginx-web-server
spec:
  selector:
    matchLabels:
      name: nginx-web-server
      app: nginx-web-server
  template:
    metadata:
      labels:
        name: nginx-web-server
        app: nginx-web-server
    spec:
      containers:
        - name: nginx-web-server
          image: nirbo2/nginx-alpine-flinks:8010ac4e03d90268d907e39b4bf2714621074dc4
          readinessProbe:
            httpGet:
              path: / 
              port: 80
