k8s-manifests/nginx-web-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-web-server
  namespace: flinks
spec:
  selector:
    app: nginx-web-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
