k8s-manifests/crud-rest-api-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: crud-rest-api-ingress
  namespace: crud-rest-api
spec:
  rules:
#    - host: www.example.com
     - http:
         paths:
           - backend:
               serviceName: crud-rest-api
               servicePort: 8080
             path: /persons
